force-app/main/default/objects/PROPERTY_ROOM_MNG__x/PROPERTY_ROOM_MNG__x.object-meta.xml
<CustomObject>
    <description>PROPERTY_ROOM_MNG</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>PROPERTY_ROOM_MNG</externalName>
    <label>物件部屋管理</label>
</CustomObject>