force-app/main/default/objects/PROPERTY_ROOM_MNG__x/fields/floor__c.field-meta.xml
<CustomField>
    <fullName>floor__c</fullName>
    <description>floor</description>
    <externalDeveloperName>floor</externalDeveloperName>
    <label>floor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>