force-app/main/default/objects/PROPERTY_ROOM_MNG__x/fields/property_room_mng_id__c.field-meta.xml
<CustomField>
    <fullName>property_room_mng_id__c</fullName>
    <description>property_room_mng_id</description>
    <externalDeveloperName>property_room_mng_id</externalDeveloperName>
    <label>property_room_mng_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>