force-app/main/default/objects/PROPERTY_ROOM_MNG__x/fields/room_name__c.field-meta.xml
<CustomField>
    <fullName>room_name__c</fullName>
    <description>room_name</description>
    <externalDeveloperName>room_name</externalDeveloperName>
    <label>room_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>